Did some cleaning up and attemped to profile the code.

--- a/README
+++ b/README
@@ -2,7 +2,9 @@ This project provides a simple parser for the Splunk Processing Language (SPL) i
 It outputs parse trees of SPL queries.
 It is not necessarily intended to be used as part of a compiler.
 
-It is currently in early stages of development.
+It is capable of parsing 66 of the most common approximately 132 SPL commands.
+
+Pull requests welcome.
 
 Contact:
 Sara Alspaugh saraalspaugh@gmail.com
